--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,7 @@
 server {
   listen 80;
   index index.html;
+  server_tokens off;
 
   location /api/ {
     proxy_set_header Host $http_host;
@@ -17,6 +18,6 @@ server {
   }
   
   location /media/ {
-      alias /var/www/media/; 
+    alias /var/www/media/; 
   }
 }
