--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     env_file: .env
     volumes:
       - static:/backend_static/
-      - media:/app/media
+      - media:/media/
     depends_on:
       - db
 
@@ -31,7 +31,7 @@ services:
     build: ./nginx/
     volumes:
       - static:/static/
-      - media:/var/www/media
+      - media:/media/
     ports:
       - 9000:80
     depends_on:
