--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,6 +18,7 @@ server {
   }
   
   location /media/ {
-    alias /var/www/media/; 
+    proxy_set_header Host $http_host;
+    alias /media/; 
   }
 }
