Fix_after_review

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -11,6 +11,7 @@ services:
     env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
+
   backend:
     image: eva33/kittygram_backend
     env_file: .env
@@ -19,15 +20,19 @@ services:
     volumes:
       - static:/backend_static/
       - media:/media/
+
   frontend:
     image: eva33/kittygram_frontend
     command: cp -r /app/build/. /frontend_static/
+    depends_on:
+      - backend
     volumes:
       - static:/frontend_static/
+
   gateway:
     image: eva33/kittygram_gateway
     depends_on:
-      - backend
+      - frontend
     ports:
       - 9000:80
     volumes:
