--- a/setup.cfg
+++ b/setup.cfg
@@ -14,3 +14,13 @@ exclude =
 # Не проверять указанные файлы на соответствие определённым правилам:
 per-file-ignores =
     */settings.py:E501
+
+[isort]
+
+profile = black
+
+src_paths = kittygram_final
+known_local_folder = cats
+force_to_top = django
+include_trailing_comma = true
+known_third_party = django
